--- a/wikablanks.css
+++ b/wikablanks.css
@@ -11,6 +11,7 @@ html, body {
     overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
+
 #bot {
     position: fixed;
     bottom: 100px;
@@ -369,7 +370,7 @@ footer {
     #bot {
         position: fixed;
         bottom: 80px;
-        right: 10px;
+        left: 90px;
         width: 80px;
         height: 80px;
         background-size: cover;
