--- a/menu.css
+++ b/menu.css
@@ -376,6 +376,19 @@ footer {
 
 /* Responsive Design */
 @media (max-width: 768px) {
+    @keyframes gradientAnimation {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
+    }
+    
+    body {
+        animation: gradientAnimation 20s ease infinite; /* Slower animation */
+    }
+    .container {
+        size: 80%;
+        width: 95%;
+    }
     header{
         z-index: 1001;
     }
