--- a/diff.css
+++ b/diff.css
@@ -260,6 +260,19 @@ main {
 
 /* Responsive Design */
 @media (max-width: 768px) {
+    @keyframes gradientAnimation {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
+    }
+    
+    body {
+        animation: gradientAnimation 20s ease infinite; /* Slower animation */
+    }
+    .container {
+        size: 80%;
+        width: 95%;
+    }
     .game-modes {
         flex-direction: column;
         gap: 10px; /* Reduce gap between game modes */
