--- a/wikablanks.css
+++ b/wikablanks.css
@@ -327,6 +327,19 @@ footer {
 }
 
 @media (max-width: 768px) {
+    @keyframes gradientAnimation {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
+    }
+    
+    body {
+        animation: gradientAnimation 20s ease infinite; /* Slower animation */
+    }
+    .container {
+        size: 80%;
+        width: 95%;
+    }
     .game-container {
         margin-top: -100px;
         padding: 5px; /* Reduce padding for better fit */
